--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -221,9 +221,13 @@
     "saveChanges": "Salvar alterações"
   },
   "contactForm": {
+    "targetCompany": "Empresa destinatária",
+    "selectCompany": "Selecione uma empresa",
+    "generalInquiry": "Consulta geral",
     "subject": "Assunto",
     "selectSubject": "Selecione um assunto",
     "subjects": {
+      "quote": "Solicitação de orçamento",
       "contact": "Contato",
       "information": "Solicitação de informação",
       "support": "Suporte técnico",
@@ -244,6 +248,7 @@
       "emailInvalid": "Email inválido",
       "subjectRequired": "O assunto é obrigatório",
       "messageMinLength": "A mensagem deve ter pelo menos 10 caracteres",
+      "companyRequired": "Selecione uma empresa",
       "consentRequired": "Você deve aceitar a política de privacidade"
     }
   },
@@ -256,6 +261,8 @@
     "blog": "Blog",
     "mediaLibrary": "Biblioteca de mídia",
     "reviews": "Avaliações de clientes",
+    "analytics": "Analytics",
+    "aerotools": "LLEDO Aerotools",
     "admins": "Administradores"
   },
   "certifications": {
